# CalibratedWeedMapping

./: .gitignore  LICENSE  README.md  calibration.ipynb  download.sh  main.py  pyproject.toml  qualitative.ipynb  script.sh
calweed/: calibrate.py  data.py  evaluate.py  metrics.py  model.py  train.py  weedmap.py
