[project]
name = "calibratedweedmapping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.0",
    "datasets>=3.6.0",
    "einops>=0.8.1",
    "evaluate>=0.4.3",
    "ipywidgets>=8.1.7",
    "lovely-tensors>=0.1.18",
    "matplotlib>=3.10.3",
    "notebook>=7.4.2",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "ruamel-yaml>=0.18.10",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.6.1",
    "streamlit>=1.45.1",
    "timm>=1.0.15",
    "torch>=2.7.0",
    "torchmetrics>=1.7.1",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
]
